--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -1,4 +1,3 @@
-# Cloudflare Pages configuratie
 name = "kunstcollectie-app"
 compatibility_date = "2023-01-01"
 
@@ -13,6 +12,11 @@ compatibility_date = "2023-01-01"
 
 # Routes configuratie
 [[redirects]]
+  from = "/api/*"
+  to = "https://api.projectkunst.nl/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
@@ -26,3 +30,9 @@ compatibility_date = "2023-01-01"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://via.placeholder.com; connect-src 'self' https://api.projectkunst.nl;"
+
+# Database configuratie voor Cloudflare D1
+[[d1_databases]]
+binding = "DB"
+database_name = "kunstcollectie_db"
+database_id = "kunstcollectie-db"
